# mai-lab-sortkey

./: CMakeLists.txt  main.c
solution/: cli.c  cli.h  solution.c  solution.h
utils/: utils.c  utils.h
vector/: item.c  item.h  vector.c  vector.h
